# AI-Risk-Agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.py  run_from_json.py  test.bat
.github/workflows/: ci-cd.yml  ci.yml
agent_module/: decision_agent.py  models.py  scoring.py
app/: main.py
app_module/: __init__.py  main.py
core/: cache.py  database.py  llm_service.py  middleware_logging.py  models.py  rate_limiting.py
core/agent/: models.py  scoring.py
data/: risk_agent.json
pytesting/: conftest.py  test_api.py  test_models.py  test_scoring.py
pytestt/: conftest.py  test_api.py  test_scoring.py
routers/: agent.py  health.py
routes/: auth.py  health.py  rout.py
scripts/: auto-push.ps1  auto-push.sh  start.ps1  startup.py
services/: agent.py  auth.py  auth_service.py  llm_service.py
tests/: batch_test.py  conftest.py  test_api.py  test_examples.ps1  test_examples.sh  test_models.py  test_scoring.py
